# skeliner

./: .gitignore  README.md  pyproject.toml
notebooks/: benchmark.draft.ipynb  dev.distance.ipynb  dev.post-radii.ipynb  dev.radii.ipynb  example.auto.vs.post.ipynb  example.draft.ipynb  example.ipynb  example.miminal.ipynb  example.pair.ipynb  example.post-radii.ipynb  example.post.ipynb  method.tour.ipynb
notebooks/data/: ball_and_stick_neuron_v1.ply  ball_and_stick_neuron_v1.swc
skeliner/: __init__.py  _core.py  _core_nx.py  _state.py  batch.py  core.py  dataclass.py  dx.py  io.py  pair.py  plot.py  post.py  skeletonize.py
skeliner/plot/: __init__.py  vis2d.py  vis3d.py
tests/: test_auto_vs_post.py  test_batch.py  test_calibrate.py  test_core.py  test_dx.py  test_dx_volume.py  test_post.py
tests/data/: 60427.ctm
